# torbi

./: .gitignore  LICENSE  README.md  build.py  build_ext_standalone.py  pyproject.toml  run.sh  setup.py
.github/workflows/: building.yaml  building_fat.yaml
config/: hyper.py  nobatch.py
tests/: test_core.py
torbi/: __init__.py  __main__.py  chunk.py  core.py  ops.cpp  ops.pyx  ops_cuda.cpp  ops_cuda_kernel.cu  pytorch.py  viterbi.cpp  viterbi.py  viterbi.pyi  viterbi_cpu.cpp  viterbi_kernel.cu
torbi/assets/partitions/: daps.json  vctk.json
torbi/config/: defaults.py  static.py
torbi/csrc/: ops.cpp  viterbi.cpp
torbi/csrc/cuda/: viterbi.cu
torbi/data/: __init__.py  collate.py  dataset.py  loader.py
torbi/data/download/: __main__.py  core.py
torbi/data/preprocess/: __main__.py  core.py
torbi/evaluate/: __main__.py  core.py  metrics.py
torbi/mps/: __init__.py  compiler.py  viterbi.h  viterbi.metal  viterbi.mm  viterbi.py
torbi/partition/: __main__.py  core.py
torbi/reference/: core.py
