[build-system]
requires = [
    "setuptools>=61.0,<70",
    "numpy",
    "torch"
]
build-backend = "setuptools.build_meta"

[project]
name = "torbi"
version = "1.3.2"
authors = [
  { name="Cameron Churchwell", email="cameronchurchwell2024@u.northwestern.edu" },
  { name="Max Morrison", email="maxrmorrison@gmail.com" },
]
description = "Optimized Viterbi decoding and fast approximations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy", "torch", "torchutil", "yapecs", "tqdm", "torchaudio", "ninja; platform_system == 'Darwin' and platform_machine == 'arm64'"
]
classifiers = [
    "License :: OSI Approved :: MIT License"
]
license = {text = "MIT License"}
keywords = ["decode", "sequence", "torch", "Viterbi"]

[project.urls]
Homepage = "https://github.com/maxrmorrison/torbi"
Issues = "https://github.com/maxrmorrison/torbi/issues"

[project.optional-dependencies]
evaluate = [
    "librosa",
    "torchaudio",
    "pytest",
    "penn"
]

[tool.setuptools.package-data]
torbi = ["assets/*", "assets/*/*", "mps/*.mm", "mps/*.metal", "mps/*.h"]
